--- a/tp6/meteo-angular/src/index.html
+++ b/tp6/meteo-angular/src/index.html
@@ -4,6 +4,11 @@
   <meta charset="utf-8">
   <title>MeteoAngular</title>
   <base href="/">
+  <style>
+  body {
+    background-image: url("sky");
+  }
+  </style>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
